dataset1235/2025-2/2947369575/users/2558997302/executions/1003782500_4233865845.log
== RUN (2025-08-27 18:38:29)
-- CODE: 
celsius=float(input())
fahrenheit=celsius*9/5+32
print(round(fahrenheit,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:37:01)
-- CODE: 
celsius=float(input())
fahreheit=celsius*9/5+32
print(round(fahrenheit,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit,2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahreheit'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit,2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahreheit'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit,2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahreheit'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit,2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahreheit'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit,2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahreheit'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit,2))
                ^^^^^^^^^^
NameError: name 'fahrenheit' is not defined. Did you mean: 'fahreheit'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:38:38)
-- CODE: 
celsius=float(input())
fahrenheit=celsius*9/5+32
print(round(fahrenheit,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
